syntax = "proto3";

package reportportal.reporting.v1;


import "google/type/datetime.proto";

option java_multiple_files = true;
option java_package = "com.epam.reportportal.reporting.v1";
option java_outer_classname = "ReportPortalProto";
option objc_class_prefix = "RP";

service ReportPortalReportingService {
  rpc Upload(UploadRequest) returns (UploadResponse) {}
  rpc UploadStream(stream UploadRequest) returns (stream UploadResponse) {}
}

message UploadRequest {
  string uuid = 1;
  google.type.DateTime timestamp = 2;
  oneof payload {
    Start start = 3;
    Finish finish = 4;
    SaveLog save_log = 5;
    SaveData save_data = 6;
  }
}

message Start {
  string name = 1;
  optional string description = 2;
  repeated ItemAttribute attributes = 3;
  oneof item {
      StartExecution execution = 4;
      StartTestItem test_item = 5;
  }
}

message StartTestItem {
  string code_ref = 3;
  string test_case_id = 4;
  string launch_uuid = 5;
  repeated Parameter parameters = 7;
  oneof item {
    RootTestItem root_item = 8;
    NestedTestItem nested_item = 9;
  }
}

message RootTestItem {
  ItemType type = 1;
  string retry_of = 2;
  repeated PathElement path = 3;
}

message NestedTestItem {
  string parent_id = 1;
}

message StartExecution {
  bool rerun = 3;
  string rerun_of = 4;
  LaunchMode mode = 5;
}

message Finish {
  ItemStatus status = 1;
  optional string description = 2;
  repeated ItemAttribute attributes = 3;
  oneof item {
      FinishExecution finish_execution = 4;
      FinishTestItem finish_item = 5;
  }
}

message FinishExecution {
}

message FinishTestItem {
  string launch_uuid = 1;
  string test_case_id = 2;
  string retry_of = 3;
  Issue issue = 4;
}

message Issue {
  string issue_type = 1;
  string comment = 2;
  bool auto_analyzed = 3;
  bool ignore_analyzer = 4;
  repeated ExternalSystemIssue external_system_issues = 5;
}

message ExternalSystemIssue {
  string ticket_id = 1;
  google.type.DateTime submit_date = 2;
  string bts_url = 3;
  string bts_project = 4;
  string url = 5;
  string plugin_name = 6;
}

message SaveLog {
  string item_uuid = 1;
  string launch_uuid = 2;
  string message = 3;
  string level = 4;
  File file = 5;
}

message File {
  string name = 1;
  string content_type = 2;
  string attachment_id = 3;
}

message SaveData {
  string name = 1;
  string content_type = 2;
  bytes content = 3;
}

message UploadResponse {
  string uuid = 1;
  OperationResult result = 2;
  string message = 3;
}

message PathElement {
  string name = 1;
  PathElementType type = 2;
}

message ItemAttribute {
  string key = 1;
  string value = 2;
  bool system = 3;
}

message Parameter {
  string key = 1;
  string value = 2;
}

enum OperationResult {
  OPERATION_RESULT_OK_UNSPECIFIED = 0;
  OPERATION_RESULT_FAIL = 1;
}

enum PathElementType {
  PATH_ELEMENT_TYPE_SUITE_UNSPECIFIED = 0;
  PATH_ELEMENT_TYPE_STORY = 1;
  PATH_ELEMENT_TYPE_TEST = 2;
  PATH_ELEMENT_TYPE_SCENARIO = 3;
  PATH_ELEMENT_TYPE_FEATURE = 4;
}

enum ItemType {
  ITEM_TYPE_STEP_UNSPECIFIED = 0;
  ITEM_TYPE_BEFORE_CLASS = 1;
  ITEM_TYPE_BEFORE_GROUPS = 2;
  ITEM_TYPE_BEFORE_METHOD = 3;
  ITEM_TYPE_BEFORE_SUITE = 4;
  ITEM_TYPE_BEFORE_TEST = 5;
  ITEM_TYPE_AFTER_CLASS = 6;
  ITEM_TYPE_AFTER_GROUPS = 7;
  ITEM_TYPE_AFTER_METHOD = 8;
  ITEM_TYPE_AFTER_SUITE = 9;
  ITEM_TYPE_AFTER_TEST = 10;
}

enum ItemStatus {
  ITEM_STATUS_PASSED_UNSPECIFIED = 0;
  ITEM_STATUS_FAILED = 1;
  ITEM_STATUS_SKIPPED = 2;
  ITEM_STATUS_STOPPED = 3;
  ITEM_STATUS_INTERRUPTED = 4;
  ITEM_STATUS_CANCELLED = 5;
  ITEM_STATUS_INFO = 6;
  ITEM_STATUS_WARN = 7;
}

enum LaunchMode {
  LAUNCH_MODE_DEFAULT_UNSPECIFIED = 0;
  LAUNCH_MODE_DEBUG = 1;
}
